fix table not overflow under safari

--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -686,7 +686,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: 1rem 0;
   line-height: 1.5;
   overflow: auto;
-  display: block;
+  display: block !important;
 }
 
 .prose td,
